# wifi-clock

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
boards/: esp32_devkitc_esp32_procpu.conf  esp32_devkitc_esp32_procpu.overlay  esp32_devkitc_wroom_procpu.conf  esp32_devkitc_wroom_procpu.overlay  native_sim.conf  native_sim.overlay
src/: clock.c  clock.h  display.c  display.h  led.c  main.c  network.c  network.h  network_time.c  network_time.h  wifi.c  wifi.h
